...
    <string name="dialog_message">The message of the dialog.</string>
    <string name="discard_changes">Do you really want to discard changes?</string>
    <string name="error">Error</string>
    <string name="error_storage_message">The storage could not be initialized.\n Stopping Application.</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Ok">OK</string>

    <!-- Warnings -->
    <string name="warning_movie_title">Title is required</string>
    <string name="warning_movie_overdue">Overdue since %d days</string>
...
    <!-- DateSelectionView -->
    <string name="date_selection_view_show_error">Show error</string>
    <string name="date_selection_view_empty_date">--.--.----</string>

    <!-- Image Descriptions -->
    <string name="remove_image_button">Removes the selected image.</string>
    <string name="date_selection_view_select_date">Select a date.</string>
    <string name="date_selection_view_delete_date">Delete a previously selected date.</string>
    <string name="list_item_portrayable_image">Image representing this entity.</string>

    <!-- Wiki Sync -->
    <!-- Info Messages -->
    <string name="warning_no_internet">No connection to the internet.\nPlease enable your WiFi connection and retry.</string>
...
