...
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    >

    <DatePicker
        style="@style/LightDatePicker"
        android:id="@+id/calendar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

...
